# apps/backend/src/modules/inicio/inicio.controller.ts
@@ -1,12 +1,0 @@
-import { Controller, Get } from '@nestjs/common';
-import { InicioService } from './inicio.service';
-
-@Controller('inicio')
-export class InicioController {
-  constructor(private readonly servicio: InicioService) {}
-
-  @Get('saludo')
-  saludo() {
-    return this.servicio.saludo();
-  }
-}
